# Crabscript

./: .gitignore  Cargo.toml  README.md  TODO  node.backup.2.rs  node.backup.rs
Tests/: args_test.crab  arithmetics  arithmetics.crab  arithmetics2  arr_iter  arr_iter2  array_index_test  arrays.od  call  call2  chained_test  closure  closure_fn  closure_fun  closure_function  closure_test  closures  collect  const.od  const_test.od  declaration_test.od  do  fact  factorial.crab  fn_closure  fn_dec.od  fn_in_loop.od  for_each  for_range  for_test  foreach  function_oof.od  functions_test.od  global_closure_hackery  hello.crab  if.od  if_else.od  if_else_simple.crab  lazy.od  loop_bench1.crab  (+27 more)
backups/: parser.backup.rs
bench/: arithmetics_fun  basic.py  simple
src/: arithmetics.rs  base.rs  conversion.rs  fs.rs  io.rs  lib.rs  main.rs  node.rs  parser.rs  parsing_error.rs  parsing_errors.rs  tests.rs  tokenizer.rs  variables.rs
src/c1/: base.rs  mod.rs  node.rs  parser.rs  tokenizer.rs  variables.rs
src/c2/: base.rs  manager.rs  mod.rs  node.rs  parser.rs  parsing_error.rs  tokenizer.rs
src/entry/: entry.rs  entryc2.rs  mod.rs
src/iter/: arr_iter.rs  map.rs  mod.rs  range.rs
src/node/: mod.rs  node.rs  nodec2.rs
src/parser/: mod.rs  parser.rs  parserc2.rs
src/std_modules/: arithmetics.rs  array.rs  bool_ops.rs  comparison.rs  conversion.rs  env.rs  fs.rs  functional.rs  io.rs  iter.rs  mod.rs  panic.rs  sys.rs  thread.rs
src/variables/: global_manager.rs  managed_arena.rs  managerc2.rs  (+2 more)
thoughts_concepts/: features_ideas  iterconcepts  varmgr_concept
(+33 files in other folders)
