[package]
name = "one_day"
version = "0.1.0"
authors = ["hassan <hassanabujabir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
regex-lexer = "*"
regex = "*"
ahash = "*"
hashbrown = "*"
thread-scoped = "1.0.2"
generational-arena = "0.2.8"
lazy_static = "1.4.0"
